--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Jinja2==3.0.3
 MarkupSafe==2.0.1
 packaging==21.3
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 PyJWT==2.3.0
 pyparsing==3.0.6
 pytz==2021.3
