--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ psycopg2==2.9.3
 psycopg2-binary==2.9.3
 PyJWT==2.3.0
 pyparsing==3.0.6
+python-decouple==3.5
 pytz==2021.3
 requests==2.27.1
 ruamel.yaml==0.17.20
