--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-heroku==0.3.1
 djangorestframework==3.13.1
 drf-yasg==1.20.0
 engineering-notation==0.6.0
+grep==0.3.2
 gunicorn==20.1.0
 idna==3.3
 inflection==0.5.1
